# agent-foundation

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.registry.yml  docker-compose.yml  index.html  init_template.py  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/skills/sync-foundation/: SKILL.md
.claude/skills/verify-image-provenance/: SKILL.md
.claude/skills/verify-image-provenance/evals/: evals.json
.github/workflows/: break-glass-promote.yml  ci-cd.yml  ci.yml  claude.yaml  claude.yml  code-quality.yml  deploy-docs.yml  docker-build-push.yml  docker-build.yml  metadata-extract.yml  pull-and-promote.yml  require-stage-success.yml  required-checks.yml  resolve-image-digest.yml  smoke.yml  terraform-plan-apply.yml
development/: index.html
docs/: README.md  bootstrap-setup.md  cicd-setup.md  cicd.md  deployment.md  development.md  docker-compose-workflow.md  dockerfile-strategy.md  environment-variables.md  getting-started.md  github-docker-setup.md  infrastructure.md  observability.md  production-environment-strategy.md  template-management.md  terraform-infrastructure.md  troubleshooting.md
docs/_planning/: reorg-migration-plan.md
docs/base-infra/: cicd-setup.md  development.md  docker-compose-workflow.md  environment-variables.md  multi-environment-guide.md
docs/references/: README.md  adk-origin-check-middleware.md  agent-evals.md  bootstrap.md  cicd.md  claude-pr-review.md  cloud-backend-options.md  cloud-run-concurrency-tuning.md  cloud-sql.md  code-quality.md  deployment.md  docker-compose-workflow.md  dockerfile-strategy.md  image-digest-resolution.md  integration-tests.md  opentelemetry-architecture.md  protection-strategies.md  security-posture.md  smoke-tests.md  testing.md
docs/stylesheets/: extra.css
environment-variables/: index.html
eval/: test_agent_eval.py
eval/data/: session_input.json  simple_time_query.test.json  template_agent.evalset.json  user_sim_config.json
getting-started/: index.html
infrastructure/: index.html
notebooks/: create_agent_engine.ipynb
observability/: index.html
references/: index.html
references/adk-origin-check-middleware/: index.html
references/agent-evals/: index.html
references/bootstrap/: index.html
references/cicd/: index.html
references/claude-pr-review/: index.html
references/cloud-backend-options/: index.html
references/cloud-run-concurrency-tuning/: index.html
references/cloud-sql/: index.html
references/code-quality/: index.html
references/deployment/: index.html
references/docker-compose-workflow/: index.html
references/dockerfile-strategy/: index.html
references/image-digest-resolution/: index.html
references/integration-tests/: index.html
references/mkdocs-setup/: index.html
references/opentelemetry-architecture/: index.html
references/protection-strategies/: index.html
references/security-posture/: index.html
references/smoke-tests/: index.html
references/testing/: index.html
search/: search_index.json
src/adk_docker_uv/: callbacks.py  prompt.py  server.py
src/adk_docker_uv/agent/: __init__.py  agent.py  callbacks.py  prompt.py
src/adk_docker_uv/utils/: __init__.py  log_config.py
src/agent_foundation/: __init__.py  _eval_app_aware_patch.py  agent.py  callbacks.py  config.py  observability.py  prompt.py  server.py  tools.py
src/agent_foundation/utils/: config.py  observability.py
template-management/: index.html
terraform/bootstrap/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  providers.tf  terraform.tf  variables.tf
terraform/bootstrap/dev/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/bootstrap/pre/: .terraform.lock.hcl  main.tf
terraform/bootstrap/prod/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
terraform/bootstrap/stage/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example
terraform/main/: .terraform.lock.hcl  backend.tf  bastion.tf  database.tf  main.tf  outputs.tf  providers.tf  smoke.tf  terraform.tf  terraform.tfvars.example  variables.tf  vpc.tf
terraform/main/templates/: bastion-cloud-init.yaml
tests/: conftest.py  test_callbacks.py  test_config.py  test_env_parser.py  test_integration.py  test_logging.py  test_logging_callbacks.py  test_prompt.py  test_tools.py
tests/eval/: conftest.py  test_agent_eval.py
tests/eval/data/: conversation_scenarios.json  full_eval_config.json  multi_turn.evalset.json  simple_time_query.test.json  template_agent.evalset.json  test_config.json
tests/integration/: conftest.py  test_server_integration.py
tests/smoke/: conftest.py  test_smoke.py
tests/unit/: conftest.py  test_callbacks.py  test_config.py  test_eval_app_aware_patch.py  test_eval_artifacts.py  test_logging_callbacks.py  test_tools.py  test_utils_config.py
troubleshooting/: index.html
(+5 files in other folders)
