[project]
name = "agent-foundation"
version = "0.19.1"
description = "Opinionated, production-ready LLM Agent deployment with enterprise-grade infrastructure"
readme = "README.md"
authors = [
    { name = "doug", email = "110487462+doughayden@users.noreply.github.com" }
]
requires-python = ">=3.13,<3.14"
dependencies = [
    # Pin ADK to test releases before locking upgrades
    "google-adk[gcp,otel-gcp]==2.4.0",
    "google-auth>=2.40.3,<3.0.0",
    "google-cloud-logging>=3.12.1,<4.0.0",
    "opentelemetry-exporter-gcp-logging>=1.12.0a0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.42.1,<2.0.0",
    "opentelemetry-instrumentation-fastapi>=0.63b1,<0.64",
    "opentelemetry-instrumentation-google-genai>=0.7b1,<1",
    "opentelemetry-instrumentation-logging>=0.63b1,<0.64",
    "pydantic>=2.11.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "sqlalchemy[postgresql-asyncpg]>=2.0.45,<3.0.0",
]

[project.scripts]
server = "agent_foundation.server:main"

[dependency-groups]
dev = [
    "google-adk[eval]==2.4.0",
    "ruff>=0.12.7,<1.0.0",
    "mypy>=1.17.1,<2.0.0",
    "pytest>=8.3.4,<9.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "pytest-asyncio>=1.2.0,<2.0.0",
    "ipykernel>=7.0.0,<8.0.0",
    "types-grpcio>=1.0.0.20251009,<2.0.0.0",
    "pytest-mock>=3.15.1,<4.0.0",
    "pre-commit>=4.6.0,<5.0.0",
    "httpx>=0.28.1,<1.0.0",
    "testcontainers[postgres]>=4.14.2,<5.0.0",
]
docs = [
    "mkdocs-callouts>=1.16.0,<2.0.0",
    "mkdocs-material>=9.7.1,<10.0.0",
]

[build-system]
requires = ["uv_build>=0.8.21,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
# https://docs.astral.sh/uv/concepts/resolution/#dependency-cooldowns
exclude-newer = "5 days"

[tool.ruff]
src = ["src"]
target-version = "py313"
line-length = 88
fix = true
extend-exclude = ["notebooks"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # Allow assert statements in tests

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
packages = ["agent_foundation"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    # __init__.py / __main__.py: namespace markers and entrypoints, no business logic
    "src/**/__init__.py",
    "src/**/__main__.py",
    # server.py: FastAPI setup and ADK initialization (integration tested via CI/CD)
    "src/**/server.py",
    # agent.py: LlmAgent instantiation (tested through callbacks, not in isolation)
    "src/**/agent.py",
    # prompt.py: Prompt text and formatting (integration tested via agent runs)
    "src/**/prompt.py",
    # observability.py: OpenTelemetry setup (infrastructure initialization)
    "src/**/observability.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2
fail_under = 100

[tool.coverage.html]
directory = "htmlcov"

[tool.pytest.ini_options]
# https://docs.pytest.org/en/stable/explanation/goodpractices.html
addopts = "--import-mode=importlib"
# Bare `pytest` runs only the fast, deterministic unit lane; other lanes run by
# explicit path (e.g. `uv run pytest tests/integration`) — see AGENTS.md Testing Patterns
testpaths = ["tests/unit"]
# Registered markers (pytest-native categorization) enable `-m` selection like
# `-m "not integration"`; lanes themselves still run by explicit path above
markers = [
    "integration: requires a real external resource (e.g. Postgres); no LLM or cloud",
    "smoke: requires a live deployed service URL",
    "deterministic: eval case scored by exact/ROUGE match (the PR gate)",
    "judge: eval case scored by an LLM judge (non-deterministic; adds the Gen AI eval service)",
]
filterwarnings = [
    # ADK 2.x deprecated the config-defined agent family; fires at import via ABCMeta
    # subclass creation (shows as <frozen abc>), unused here — match by message
    "ignore:BaseAgentConfig is deprecated:DeprecationWarning",
]
asyncio_mode = "auto"
# Uncomment to enable live logging for debugging API calls
# log_cli = true
# log_cli_level = "DEBUG"
# log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s - %(message)s"
# log_cli_date_format = "%Y-%m-%d %H:%M:%S"
